// Copyright 2019 Kyungho Jeon.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.github.kyunghoj.idservice";
option java_outer_classname = "IdServiceProto";

package idservice;

service IdService {
  // rpc CreateNewID (IdRequest) returns (IdResponse) {}
  rpc GetUID (IdRequest) returns (IdResponse) {} // Given a User Name, return UID
  rpc GetGID (IdRequest) returns (IdResponse) {} // Given a Group Name, return GID
  // rpc GetGIDs (IdRequest) returns (IdResponse) {}
  // rpc DeleteID (IdRequest) returns (IdResponse) {}
}

// The request message containing the user's name.
message IdRequest {
  string query = 1; // could be username or groupname
  // string auth_token = 2;
}

// The response message containing the greetings
message IdResponse {
  int32 ret_code = 1;
  int32 id = 2;         // result
  string error_msg = 3;  // error message, if any
}
